added comments for docs